--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.5.2",
     "react-google-button": "^0.5.3",
+    "react-md-spinner": "^0.3.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
